@@ -1,5 +1,9 @@
 ;;;; -*- coding: utf-8; fill-column: 78 -*-
 
+changes relative to sbcl-1.4.3:
+  * bug fix: pathname accessors such as PATHNAME-DIRECTORY work on
+    SYNONYM-STREAMs.
+
 changes in sbcl-1.4.3 relative to sbcl-1.4.2:
   * enhancement: SLEEP respects deadlines established by SB-SYS:WITH-DEADLINE.
   * bug fix: DECODE-TIMEOUT and operators accepting a timeout no longer signal
